apps/iot/esphome/base/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:95nhn2+8bE7z8Or+DQttWvrWCK+YmA==,iv:FmvBpAvN0/YKgDhb1q6CmLjApzbSP8Zzk/C7rVeAGa0=,tag:N2qLpy6gEmTM0uhq3tj2aA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: esphome
    namespace: iot
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:zoTZDlL81Nbe0MN7JNNxXI6K9ysyfRnu96yPDFfGrpOZH9kGrk8=,iv:37Ren0ilh95W0JPlBu1rlsKwQwgAd1vpTlipAQmdICc=,tag:vZVLXLSpF94kLHT4jMs9VQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: esphome
              namespace: iot
    tls:
        domains:
            - main: ENC[AES256_GCM,data:QnUBlX7xY/Jd5cgbaVZpml7QbP+/IA==,iv:nhXTqWl/3zpB1bqvtgTqba+h3GXmV8ajOqRpufDTCLw=,tag:s/7dg+N0zqXmPxIZvn+tcg==,type:str]
              sans:
                - ENC[AES256_GCM,data:x20VnnPvdskBOtNXAh3vtydibQlBL3U=,iv:q9RcSPF4nc1mv6FHcVBw5GH9s9x3pjTpg5OAYY/rZUY=,tag:vjwMRBPESEnkw1MtKqMFnw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: esphome-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3MktGMlN2bjZJMTFMajV4
[...]
            w8c5qHh01uQHiHi1U4QFQUizRjNVib9Gu0ehqrwESX3eqgfzKH5jww==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-22T20:12:36Z"
    mac: ENC[AES256_GCM,data:VzqGkr39zvWK4s876qi/mXBton1EAcHMU0ffQKoa23KaRzrxC80KeJy/BmA4cC4LIBZqh0gOfshg6k4TkBna2PrJl7ySQi6acgPSExFytbbFN4sLocn2IhOvYPkrzuBxUaVFJVcQy3pob+iq1w0fGKYj1hTtyV4hvrkj2NXNFXg=,iv:GZx4J6EGA98QjTdak5EtOfdHYiUmHreZ/T8PhTHLjNs=,tag:q+shM60RcB8gTIYpyK5czQ==,type:str]
    pgp:
        - created_at: "2024-06-22T20:24:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ckdUFF47JENHLxFJOHZDfsPBDa38fqH2UMJ+x0+OW12I
[...]
            =3F81
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
